app/styles/main.css
/* Space out content a bit */
body {
}

.header {
    min-height: 100px;
    overflow: hidden;
}

.main-nav {
    position: fixed !important;
    width: 100%;
    z-index: 90;
    min-height: 100px;
    background-color: #AB2688;
    color: #FFFFFF;
}

.main-nav a {
    text-decoration: none !important;
    color: inherit;
    display: block;
}

.main-nav .menuitem {
    text-align: center;
    border-right: 1px solid rgb(209, 209, 209);
    cursor: pointer;
    font-size: 30px;
    line-height: 100px;
    width: 33.33%;
}

.main-nav .active {
    background-color: #6A104D;
    color: #FFFFFF;
}

.main-nav .menuitem:hover {
    background-color: #812262;
    color: #FFFFFF;
}

.content {
    padding: 20px;
}

.footer {
    height: 80px;
    background-color: #e6e4e8;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    padding-top: 20px;
    padding-left: 20px;
}

.amountPicker {
    margin-bottom: 80px;
}

.amountSlider {
    height: 100px;
}

.amountDisplay {
    width: 250px;
    font-size: 30px;
    margin: 20px auto;
}

.amountDisplay input {
    font-size: 30px;
    height: 50px;
    text-align: center;
}

.amountDisplay span {
    font-size: 20px;
}

input[type="range"] {
    -webkit-appearance: none;
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
    width: 100%;
    height: 20px;
    margin: 0;
    border: none;
    padding: 1px 2px;
    border-radius: 14px;
    background-color: #BABABA;
    box-shadow: inset 0 1px 0 0 #bababa, inset 0 -1px 0 0 #bababa;
    -webkit-box-shadow: inset 0 1px 0 0 #bababa, inset 0 -1px 0 0 #bababa;
    outline: none;
}

input[type="range"]::-moz-range-track {
    border: inherit;
    background: transparent;
}

input[type="range"]::-ms-track {
    border: inherit;
    color: transparent;
    background: transparent;
}

input[type="range"]::-ms-fill-lower,
input[type="range"]::-ms-fill-upper {
    background: transparent;
}

input[type="range"]::-ms-tooltip {
    display: none;
}

/* thumb */

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 70px;
    height: 50px;
    border: none;
    border-radius: 12px;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #484848), color-stop(100%, #484848));
    background-image: -webkit-linear-gradient(top , #999 0, #484848 100%);
    background-image: linear-gradient(to bottom, #999 0, #484848 100%);
}
input[type="range"]::-moz-range-thumb {
    width: 70px;
    height: 50px;
    border: none;
    border-radius: 12px;
    background-image: linear-gradient(to bottom, #999 0, #484848 100%);
}

input[type="range"]::-ms-thumb {
    width: 70px;
    height: 50px;
    border-radius: 12px;
    border: 0;
    background-image: linear-gradient(to bottom, #999 0, #484848 100%);
}

.investSection {
    height: 800px;
    border-bottom: 3px solid #ebebeb;
}

.investSection.first {
    height: 700px;
}

.investSection.current {
    border: none;
}

.btn-centered {
    margin: 0 auto;
    display:table;
}

/*  For mobile / tablets / small resolutions */
@media (max-width: 767px) {

}

.notificationBar {
    display: block;
    position: fixed;
    top: -100px;
    left: 0;
    height: 100px;
    text-align: center;
    line-height: 100px;
    font-size: 30px;
    background-color: #d847a7;
    color: #FFF;
    z-index: 100;
}

.fundDetailsContainer {
    width: 100%;
    height: 300px;
    background-color: #e1e1e1;
    border: 1px solid #707070;
}

.fundDetailsContainer .h2 {
    text-align: center;
}

.fundDetails {
    margin-right: 50px;
}

